--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Pengingat Tugas</title>
+  <title>Login & Register</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Selamat Datang di Pengingat Tugas</h1>
-
-  <!-- Form login -->
-  <form action="dashboard.html" method="post">
-    <label for="username">Nama Pengguna:</label><br>
-    <input type="text" id="username" name="username" placeholder="Masukkan nama kamu" required><br><br>
-
-    <label for="password">Kata Sandi:</label><br>
-    <input type="password" id="password" name="password" placeholder="Masukkan kata sandi" required><br><br>
-
-    <button type="submit">Masuk</button>
-  </form>
-
-  <p>Belum punya akun? <a href="#">Daftar di sini</a></p>
+  <div class="container" id="container">
+    <div class="form-container sign-up-container">
+      <form action="#">
+        <h1>Buat Akun</h1>
+        <input type="text" placeholder="Nama Lengkap" />
+        <input type="email" placeholder="Email" />
+        <input type="password" placeholder="Password" />
+        <button>Daftar</button>
+      </form>
+    </div>
+    <div class="form-container sign-in-container">
+      <form action="#">
+        <h1>Masuk</h1>
+        <input type="email" placeholder="Email" />
+        <input type="password" placeholder="Password" />
+        <button>Masuk</button>
+      </form>
+    </div>
+    <div class="overlay-container">
+      <div class="overlay">
+        <div class="overlay-panel overlay-left">
+          <h1>Selamat Datang Kembali!</h1>
+          <p>Sudah punya akun? Silakan login di sini!</p>
+          <button class="ghost" id="signIn">MASUK</button>
+        </div>
+        <div class="overlay-panel overlay-right">
+          <h1>Hai, Teman Baru!</h1>
+          <p>Belum punya akun? Yuk daftar dulu biar bisa lanjut!</p>
+          <button class="ghost" id="signUp">DAFTAR</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
